[package]
name = "cumulus"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
ansi_term = "0.12.1"
rlua = "0.19.4"
http = "0.2.8"
directories = "4.0.1"
ctrlc = "3.2.3"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
